# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

if (!is_mingw && !is_mac) {
  ohos_copy("preferences_declaration") {
    sources = [ "./api" ]
    outputs = [ target_out_dir + "/$target_name/" ]
    module_source_dir = target_out_dir + "/$target_name"
    module_install_name = ""
    subsystem_name = "distributeddatamgr"
    part_name = "preferences"
  }

  ohos_shared_library("storage") {
    include_dirs = [
      "include",
      "../common/include",
    ]

    sources = [
      "../common/src/js_observer.cpp",
      "../common/src/js_utils.cpp",
      "../common/src/napi_async_call.cpp",
      "../common/src/napi_preferences_observer.cpp",
      "../common/src/uv_queue.cpp",
      "src/entry_point_storage.cpp",
      "src/napi_storage.cpp",
      "src/napi_storage_helper.cpp",
    ]

    external_deps = [
      "hilog_native:libhilog",
      "napi:ace_napi",
      "preferences:native_preferences",
    ]

    subsystem_name = "distributeddatamgr"
    part_name = "preferences"
    relative_install_dir = "module/data"
  }
}
