# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")

if (!is_mingw && !is_mac) {
  ohos_copy("preferences_declaration") {
    sources = [ "./api" ]
    outputs = [ target_out_dir + "/$target_name/" ]
    module_source_dir = target_out_dir + "/$target_name"
    module_install_name = ""
    subsystem_name = "distributeddatamgr"
    part_name = "preferences"
  }

  ohos_shared_library("storage_napi") {
    branch_protector_ret = "pac_ret"
    sanitize = {
      boundary_sanitize = true
      ubsan = true
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
    cflags_cc = [
      "-std=c++17",
      "-stdlib=libc++",
    ]
    include_dirs = [
      "include",
      "${preferences_base_path}/frameworks/common/include",
    ]

    sources = [
      "src/entry_point_system_storage.cpp",
      "src/napi_system_storage.cpp",
    ]

    deps = [
      "${preferences_base_path}/interfaces/inner_api:native_preferences",
      "${preferences_napi_path}/common:preferences_jscommon",
    ]

    external_deps = [
      "ability_runtime:abilitykit_native",
      "ability_runtime:napi_base_context",
      "common_event_service:cesfwk_innerkits",
      "hilog:libhilog",
      "napi:ace_napi",
    ]

    subsystem_name = "distributeddatamgr"
    part_name = "preferences"
    relative_install_dir = "module"
  }
}
