# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${preferences_base_path}/frameworks/ndk/include",
    "${preferences_base_path}/frameworks/common/include",
    "${preferences_native_path}/include",
    "${preferences_native_path}/platform/include/",
    "${preferences_interfaces_path}/ndk/include/",
    "${preferences_base_path}/test/ndk/mock",
    "${preferences_native_path}/mock/ability_runtime/dataobs_manager/include",
    "${preferences_native_path}/mock/ability_base/zuri/include",
  ]
}

##############################fuzztest##########################################
ohos_fuzztest("GskvNdkPreferencesGetFuzzTest") {
  module_out_path = "preferences/preferences"

  fuzz_config_file = "//foundation/distributeddatamgr/preferences/test/ndk/fuzztest/gskvndkpreferencesget_fuzzer"

  sources = [
    "${preferences_base_path}/test/ndk/mock/application_context.cpp",
    "${preferences_native_path}/mock/ability_base/zuri/src/uri.cpp",
    "${preferences_native_path}/mock/ability_runtime/dataobs_manager/src/data_ability_observer_stub.cpp",
    "${preferences_native_path}/mock/ability_runtime/dataobs_manager/src/dataobs_mgr_client.cpp",
    "${preferences_native_path}/src/preferences_impl.cpp",
    "${preferences_ndk_path}/src/oh_convertor.cpp",
    "${preferences_ndk_path}/src/oh_preferences.cpp",
    "${preferences_ndk_path}/src/oh_preferences_option.cpp",
    "gskvndkpreferencesget_fuzzer.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "${preferences_innerapi_path}:native_preferences_static" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":GskvNdkPreferencesGetFuzzTest",
  ]
}
###############################################################################
